SERVER-42969 Fix handling of Unicode strings in windows `USERPROFILE` environment variable.